--- a/patient-service.properties
+++ b/patient-service.properties
@@ -12,4 +12,12 @@ spring.h2.console.enable=true
 
 message=message from patient-service from default env
 
+#---
+spring.config.activate.on-profile=dev
+message=development profile message from course-service
+
+#---
+spring.config.activate.on-profile=prod
+message=production profile updated message from course-service
+
 
