--- a/patient-service-prod.properties
+++ b/patient-service-prod.properties
@@ -10,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enable=true
 
-message=message from patient-service from prod env
+message=Updated message from patient-service from prod env
 
 #spring.boot.admin.client.url=http://host.docker.internal:8888
 
